argocd/preprod/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trajekto-frontend
  namespace: trajekto
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`trajekto.quill-pro.net`)
      services:
        - name: trajekto-frontend
          port: 80
  tls:
    secretName: trajekto-frontend-tls
